2008-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c (twitux_network_get_image): 
	Fix crash when fetching images. (Mike Lundy)

2008-12-14  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.68.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* src/twitux-spell.c:
	* src/Makefile.am:
	Use enchant for spell checking, instead of aspell.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-about.c (WEB_SITE):
	Update link to use Sourceforge summary page.

2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c:
	* src/twitux-network.[ch] (twitux_network_get_image): 
	Handle avatars a little more sensibly. (#1963695)

2008-12-07  Brian Pepple  <bpepple@fedoraproject.org>

	* libtwitux/twitux-keyring.h:
	* libtwitux/twitux-xml.[ch]:
	* src/twitux-about.[ch]:
	* src/twitux-add-dialog.[ch]:
	* src/tiwtux-account-dialog.[ch]:
	* src/twitux-app.h:
	* src/twitux-dbus.h:
	* src/twitux-geometry.h:
	* src/twitux-hint.[ch]:
	* src/twitux-lists-dialog.[ch]:
	* src/twitux-main.c: 
	* src/twitux-preferences.[ch]:
	* src/twitux-send-message-dialog.[ch]:
	* src/twitux-tweet-list.[ch]:
	* src/twitux-ui-utils.[ch]:
	Clean up GLib and GTK+ includes. http://live.gnome.org/GnomeGoals/CleanupGTKIncludes

	
2008-12-06  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* data/prefs_dlg.xml:
	* data/twitux.schemas.in: 
	* src/twitux.h:
	* src/twitux-app.c (twitux_app_show_notification): 
	* src/twitux-preferences.c:
	Added option to have a sound notification when a new
	tweet arrives. (#2037880)

2008-12-04  Brian Pepple  <bpepple@fedoraproject.org>

	* data/Makefile.am (glade_DATA):
	* src/twitux-app.c (app_status_icon_create_menu): 
	Drop tray_menu.xml, and manually create the notification
	area popup menu.
	
2008-12-04  Brian Pepple  <bpepple@fedoraproject.org>

	* Makefile.am (SUBDIRS): 
	* data/glade/main_window.glade:
	* data/main_window.xml:
	* po/POTFILES.in: